cleanup contrast fixes

--- a/wp-content/themes/a-weedy-florilegium/_assets/_css/compass/stylesheets/global.css
+++ b/wp-content/themes/a-weedy-florilegium/_assets/_css/compass/stylesheets/global.css
@@ -50,6 +50,8 @@ body.call-contrast #wrapper {
   color: #e9e9e9 !important; }
 body.call-contrast .site-name .drop-shadow {
   background: #af8088 !important; }
+body.call-contrast .site-name .call-access-menu {
+  color: #1840ac !important; }
 body.call-contrast .site-name .author-tag {
   color: #8adb0d !important; }
 body.call-contrast .site-description .drop-shadow {
